--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
           </ul>
 
       </section>
+      <section class="card" id="GitHub-section">
+          <h2>GitHub</h2>
+          <ul>
+            <li>git add -A</li>
+            <li>git commit -m "Note"</li>
+            <li>git pull origin main</li>
+            <li>git push origin feature/add-js</li>
+          </ul>
+      </section>
     </main>
 
     <footer>
