Edited Git Note

--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
             <li>git add -A</li>
             <li>git commit -m "Note"</li>
             <li>git pull origin main</li>
-            <li>git push origin feature/add-js</li>
+            <li>git push origin feature/"Branch"</li>
+          </ul>
+      </section>
+      <section class="card" id="SSH-section">
+          <h2>SSH</h2>
+          <ul>
+            <li>Nav to .SSH</li>
+            <li>exec ssh-agent bash</li>
+            <li>ssh-add SSHKEYBOOTCAMP</li>
+            <li>ssh-agent</li>
           </ul>
       </section>
     </main>
